// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic not selected 1`] = `
<div>
  <div
    class="pf-c-toggle-group__item"
  >
    <button
      aria-label="basic not selected"
      aria-pressed="false"
      class="pf-c-toggle-group__button"
      id="toggleGroupItem"
      type="button"
    >
      <span
        class="pf-c-toggle-group__text"
      >
        test
      </span>
    </button>
  </div>
</div>
`;

exports[`basic selected 1`] = `
<div>
  <div
    class="pf-c-toggle-group__item"
  >
    <button
      aria-label="basic selected"
      aria-pressed="false"
      class="pf-c-toggle-group__button"
      id="toggleGroupItem"
      type="button"
    >
      <span
        class="pf-c-toggle-group__text"
      >
        test
      </span>
    </button>
  </div>
</div>
`;

exports[`icon variant 1`] = `
<div>
  <div
    class="pf-c-toggle-group__item"
  >
    <button
      aria-label="icon variant"
      aria-pressed="false"
      class="pf-c-toggle-group__button"
      id="toggleGroupItem"
      type="button"
    >
      <span
        class="pf-c-toggle-group__icon"
      >
        icon
      </span>
    </button>
  </div>
</div>
`;

exports[`isCompact 1`] = `
<div>
  <div
    class="pf-c-toggle-group pf-m-compact"
    role="group"
  >
    <div
      class="pf-c-toggle-group__item"
    >
      <button
        aria-pressed="false"
        class="pf-c-toggle-group__button"
        type="button"
      >
        <span
          class="pf-c-toggle-group__text"
        >
          Test
        </span>
      </button>
    </div>
    <div
      class="pf-c-toggle-group__item"
    >
      <button
        aria-pressed="false"
        class="pf-c-toggle-group__button"
        type="button"
      >
        <span
          class="pf-c-toggle-group__text"
        >
          Test
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`isDisabled 1`] = `
<div>
  <div
    class="pf-c-toggle-group__item"
  >
    <button
      aria-label="isDisabled"
      aria-pressed="false"
      class="pf-c-toggle-group__button"
      disabled=""
      id="toggleGroupItem"
      type="button"
    >
      <span
        class="pf-c-toggle-group__text"
      >
        test
      </span>
    </button>
  </div>
</div>
`;
